welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: L is already defined as variable L
  val L= litMessage().toInt
      ^Array2:4: error: not found: value i
  var T = new Array[Color](i)
                           ^Array2:13: error: not found: value j
  recule(j)
         ^